--- a/zhuoyou/toupiao.css
+++ b/zhuoyou/toupiao.css
@@ -88,8 +88,8 @@ main {
 .blocks {
     float: left;
     padding: 1.5rem;
-    width: 33.3vw;
-    height: 33.3vw;   
+    width: 33vw;
+    height: 33vw;   
 }
 
 .boxs {
@@ -97,40 +97,45 @@ main {
     width: 100%;
     height: 100%;
     border: solid .2rem #fff;
+    border-bottom: none;
     outline-style: none;
 }
 
 .box-1 {
-    padding-top: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 70%;
-    font-size: 1.7rem;
-    text-align: center;
+    font-size: 2rem;
     color: #565656;
     background-color: #f5c97b;
 }
 
 .box-2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: 30%;
     font-size: 1.4rem;
-    text-align: center;
+    height: 30%;
     color: #fff;
     background-color: #83b09a;
+    border-bottom: solid .2rem #fff;
 }
 
 .ul {
     display: none;
     margin-top: .8rem;
     width: 100%;
-    height: 1.5rem;
+    height: 3vw;
 }
 
 .li {
     display: inline-block;
-    width: 1.5rem;
-    height: 100%;
-    border: solid .1rem #000;
+    width: 1.2rem;
+    height: 1.2rem;
+    border: solid .05rem #000;
 }
 
 .li:nth-of-type(1) {
@@ -179,7 +184,7 @@ footer {
 }
 
 .vote-2:hover {
-    text-decoration:none;
+    text-decoration: none;
     color: #fff;
     outline: #fbb435 groove ;
 }
